--- a/1st+assignment.ipynb
+++ b/1st+assignment.ipynb
@@ -112,7 +112,7 @@
    "source": [
     "from googleapiclient.discovery import build\n",
     "\n",
-    "api_key = 'AIzaSyCxs9H-OE8cQXD1q8jmWfvZI9qbPQSKycY'\n",
+    "api_key = 'xxxx-xxxx-xxx'\n", #API key hidden
     "youtube = build('youtube', 'v3', developerKey=api_key)\n",
     "\n",
     "# Search for videos related to \"avatar movie\"\n",
